--- a/views/users/Profile/editAddress.ejs
+++ b/views/users/Profile/editAddress.ejs
@@ -199,16 +199,14 @@
                                 </div>
 
 
-                                <div class="mb-3">
+                                <div class="mb-3 container">
                                     <label class="small mb-1" for="inputAddressType">Address Type</label>
                                     <div class="col-md-6">
-                                        <input class="form-check-input" type="radio" id="home" name="addressType"
-                                            value="<%= address.addressType %>">
+                                        <input class="form-check-input" type="radio" id="home" name="addressType" value="Home" <%= address.addressType === 'Home' ? 'checked' : '' %>>
                                         <label class="form-check-label" for="home">Home</label>
                                     </div>
                                     <div class="col-md-6">
-                                        <input class="form-check-input" type="radio" id="work" name="addressType"
-                                            value="<%= address.addressType %>">
+                                        <input class="form-check-input" type="radio" id="work" name="addressType" value="Work" <%= address.addressType === 'Work' ? 'checked' : '' %>>
                                         <label class="form-check-label" for="work">Work</label>
                                     </div>
                                 </div>
