--- a/views/users/Profile/userProfile.ejs
+++ b/views/users/Profile/userProfile.ejs
@@ -262,7 +262,7 @@
 			}
 
 			try {
-				const response = await axios.put('http://localhost:8000/userProfile', { name, email, mobile });
+				const response = await axios.put('/userProfile', { name, email, mobile });
 				if (response.data.success) {
 					await Swal.fire({
 						icon: 'success',
