--- a/views/admin/UserDetails/users.ejs
+++ b/views/admin/UserDetails/users.ejs
@@ -281,7 +281,7 @@
     <script>
       async function blockUser(userId) {
 
-        const responce = await axios.post('http://localhost:8000/admin/users/block', { userId });
+        const responce = await axios.post('/admin/users/block', { userId });
         if (responce.data.success) {
           await Swal.fire({
             icon: 'success',
