--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -220,7 +220,7 @@
                               <% } %>
                               <tr>
                                   <td colspan="8" style="font-size: 8px; text-align: right; color: red;"><strong>Total Sales Amount</strong></td>
-                                  <td style="font-size: 8px; color: green;"><strong><%= totalSales %></strong></td>
+                                  <td style="font-size: 8px; color: green;" id="totalSales"><strong><%= totalSales %></strong></td>
                               </tr>
                           </tbody>
                       </table>
@@ -357,6 +357,7 @@
       `;
 
       tableBody.appendChild(row);
+
     });
   }
 </script>
